--- a/.lightserverrc
+++ b/.lightserverrc
@@ -5,8 +5,8 @@
  "delay": 100,
  "quiet": true,
  "watchexps": [
-    "src/scripts/**/*.js # npm run scripts:dev",
-    "src/styles/**/*.scss # npm run styles:dev # reloadcss",
+    "src/scripts/**/*.js # npm run webpack:dev",
+    "src/styles/**/*.scss # npm run webpack:dev # reloadcss",
     "dist/**/*.html",
     "src/images/"
  ],
